# blog-watcher

./: .gitignore  Dockerfile  LICENSE  README.md  config.example.toml  config.toml  docker-compose.yml  pyproject.toml
.claude/: settings.json
docs/plans/: 001-technology-stack.md  002-change-detection.md  003-storage.md  004-deployment.md  005-error-handling.md  006-software-architecture.md  007-testing-strategy.md  008-core-module-requirements.md  009-logging-strategy.md  010-refactor-change-detector-tests.md  ROADMAP.md
docs/plans/adr/: 001-technology-stack.md  002-change-detection.md  003-storage.md  004-deployment.md  README.md
src/blog_watcher/: __init__.py  main.py
src/blog_watcher/config/: __init__.py  errors.py  loader.py  models.py  provider.py
src/blog_watcher/core/: __init__.py  scheduler.py  watcher.py
src/blog_watcher/detection/: __init__.py  change_detector.py  feed_detector.py  http_fetcher.py  models.py  url_extractor.py  url_fingerprinter.py  url_normalizer.py
src/blog_watcher/detection/feed/: __init__.py  change_detector.py  detector.py
src/blog_watcher/detection/sitemap/: __init__.py  change_detector.py  detector.py
src/blog_watcher/detection/urls/: __init__.py  extractor.py  html_parser.py  normalizer.py
src/blog_watcher/notification/: __init__.py  base.py  slack.py
src/blog_watcher/notifications/: __init__.py  base.py  models.py  slack.py
src/blog_watcher/observability/: __init__.py  logging.py
src/blog_watcher/storage/: __init__.py  database.py  models.py  repository.py  sql.py
src/blog_watcher/storage/sql/: schema.sql
src/blog_watcher/storage/sql/blog_state/: delete.sql  get.sql  list_all.sql  upsert.sql
src/blog_watcher/storage/sql/check_history/: add.sql  list_by_blog_id.sql
tests/: conftest.py
tests/e2e/: .env.example  config.toml  conftest.py  test_e2e_rss.py  test_full.py  test_rss.py  test_sitemap.py
tests/e2e/assertions/: __init__.py  assertions.py
tests/e2e/fakes/: __init__.py  blog_server.py
tests/e2e/helpers/: __init__.py  config.py  database.py  env.py  server.py  slack.py
tests/factories/: __init__.py  detection.py  storage.py
tests/fixtures/config/: empty_blogs.toml  empty_slack_url.toml  extra_field_slack.toml  invalid_blog_url.toml  invalid_slack_url.toml  missing_blog_name.toml  missing_blog_url.toml  missing_slack.toml  type_mismatch_blog_url.toml  type_mismatch_blogs_list.toml  type_mismatch_slack_url.toml
tests/fixtures/feeds/: atom_valid.xml  rss_cdata_malformed.xml  rss_cdata_valid.xml  rss_guid.xml  rss_id_no_title.xml  rss_id_title_published.xml  rss_id_title_unparseable_date.xml  rss_invalid_date.xml  rss_no_items.xml  rss_preserve_order.xml  rss_title_published_only.xml  rss_valid_updated.xml
tests/fixtures/html/: feed_link_atom.html  feed_links_both.html  no_feed_links.html
tests/integration/: conftest.py
tests/integration/core/: helpers.py  test_integ_core.py  test_integ_scheduler.py  test_integ_shutdown.py
tests/integration/detection/: test_http_fetcher.py  test_integ_change_detector.py  test_integ_http_fetcher.py
tests/integration/observability/: test_integ_logging.py
tests/integration/storage/: test_integ_repository.py  test_repository.py
tests/mocks/: core.py
tests/strategies/: __init__.py  html.py  url.py  xml.py
tests/test_utils/: __init__.py
tests/test_utils/factories/: __init__.py  detection.py  storage.py
tests/test_utils/fakes/: __init__.py  detection.py
tests/test_utils/fixture/config/: empty_blog_name.toml  empty_blog_url.toml  extra_field_blog.toml  extra_field_root.toml  invalid_blog_url.toml  invalid_toml.toml  minimal_valid.toml  missing_blog_url.toml  type_mismatch_blog_url.toml  type_mismatch_slack_url.toml
tests/test_utils/fixture/feeds/: rss_id_title_blank_date.xml  rss_missing_title.xml  rss_no_guid.xml  rss_valid.xml
tests/test_utils/fixture/html/: feed_link_duplicate.html  feed_link_rss.html
tests/test_utils/fixture/sitemap/: index.xml  no_namespace.xml  robots_with_sitemap.txt  urlset.xml
tests/test_utils/helpers/: __init__.py  detection.py  fixture.py
tests/test_utils/mocks/: __init__.py  core.py
tests/test_utils/strategies/: __init__.py  html.py  url.py  xml.py
tests/unit/: conftest.py
tests/unit/config/: test_loader.py
tests/unit/core/: test_scheduler.py
tests/unit/detection/: __init__.py  test_cache_staleness.py  test_change_detector.py  test_feed_change_detector.py  test_feed_detector.py  test_http_fetcher.py  test_sitemap_change_detector.py  test_sitemap_detector.py  test_url_extractor.py  test_url_fingerprinter.py  test_url_normalizer.py
tests/unit/notifications/: test_slack.py
tests/unit/observability/: test_logging.py
tests/unit/storage/: __init__.py  test_models.py
