[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blog-watcher"
version = "0.1.0"
description = "A lightweight blog monitoring tool that detects content updates via HTML hashing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "feedparser>=6.0.0",
    "lxml>=5.0.0",
    "pydantic>=2.0.0",
    "apscheduler>=3.10.0",
    "structlog>=24.0.0",
    "tenacity>=8.0.0",
    "typer>=0.12.0",
]

[project.scripts]
blog-watcher = "blog_watcher.main:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.6.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "respx>=0.21.0",
    "pytest-httpserver>=1.0.0",
    "freezegun>=1.5.0",
    "factory-boy>=3.3.0",
    "pytest-randomly>=3.15.0",
    "hypothesis>=6.100.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/blog_watcher"]

[tool.ruff]
target-version = "py312"
line-length = 150
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",      # pydocstyle (docstring)
    "COM812", # trailing comma (conflicts with formatter)
    "ISC001", # implicit string concat (conflicts with formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "PLR2004"]
"tests/factories/storage.py" = ["ANN401"]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = ["feedparser"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (real DB/HTTP)",
    "e2e: End-to-end tests (full system)",
    "slow: Slow tests (scheduler, timing-dependent)",
    "property_based: Property-based tests using Hypothesis",
]
addopts = [
    "--strict-markers",
    "--tb=short",
    "--cov-branch",
    "--import-mode=importlib",
    "--cov=src/blog_watcher",
    "--cov-fail-under=85",
]

[tool.hatch.envs.default]
dependency-groups = ["dev"]

[tool.hatch.envs.default.scripts]
test = "pytest -n auto"
"test:unit" = "pytest -n auto -m unit"
"test:integration" = "pytest -n auto -m integration"
"test:e2e" = "pytest -n auto -m e2e"
"test:slow" = "pytest -n auto -m slow"

check = "ruff check src tests && mypy src"
"check:lint" = "ruff check src tests"
"check:type" = "mypy src"

fix = "ruff format src tests && ruff check --fix src tests"
"fix:format" = "ruff format src tests"
"fix:lint" = "ruff check --fix src tests"
