[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blog-watcher"
version = "0.1.0"
description = "A lightweight blog monitoring tool that detects content updates via HTML hashing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "feedparser>=6.0.0",
    "lxml>=5.0.0",
    "pydantic>=2.0.0",
    "apscheduler>=3.10.0",
    "structlog>=24.0.0",
    "tenacity>=8.0.0",
    "typer>=0.12.0",
]

[project.scripts]
blog-watcher = "blog_watcher.main:app"

[dependency-groups]
test = [
  "pytest>=8.0.0",
  "pytest-cov>=4.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-xdist>=3.6.0",
  "respx>=0.21.0",
  "pytest-httpserver>=1.0.0",
  "freezegun>=1.5.0",
  "factory-boy>=3.3.0",
  "pytest-randomly>=3.15.0",
  "hypothesis>=6.100.0",
  "python-dotenv>=1.0.1",
]
check = [
  "mypy>=1.10.0",
  "ruff>=0.4.0",
]
fix = [
  "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/blog_watcher"]

[tool.ruff]
target-version = "py312"
line-length = 150
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",      # pydocstyle (docstring)
    "COM812", # trailing comma (conflicts with formatter)
    "ISC001", # implicit string concat (conflicts with formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "PLR2004", "S603"]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = ["feedparser"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pytest_httpserver"]
disallow_untyped_calls = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (real DB/HTTP)",
    "e2e: End-to-end tests (full system)",
    "slow: Slow tests (scheduler, timing-dependent)",
    "property_based: Property-based tests using Hypothesis",
]
addopts = [
    "--strict-markers",
    "--tb=short",
    "--cov-branch",
    "--import-mode=importlib",
    "--cov=src/blog_watcher",
]

[tool.coverage.run]
omit = ["src/blog_watcher/main.py"]
parallel = true

[tool.hatch.envs.test]
dependency-groups = ["test"]

[tool.hatch.envs.test.scripts]
all = "pytest -n auto --cov-fail-under=85"
cov = "pytest -n auto --cov-report=term-missing"
cov_html = "pytest -n auto --cov-report=html"
cov_diff = "pytest -n auto --cov-report=term-missing:skip-covered"
unit = "pytest -n auto -m unit"
integ = "pytest -n auto -m integration"
e2e = "pytest -n auto -m e2e"
slow = "pytest -n auto -m slow"

[tool.hatch.envs.check]
skip-install = true
dependency-groups = ["check", "test"]

[tool.hatch.envs.check.scripts]
all = "ruff check src tests && mypy src tests"
lint = "ruff check src tests"
type = "mypy src tests"

[tool.hatch.envs.fix]
skip-install = true
dependency-groups = ["fix"]

[tool.hatch.envs.fix.scripts]
all = "ruff format src tests && ruff check --fix src tests"
format = "ruff format src tests"
lint = "ruff check --fix src tests"
